--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -1,4 +1,10 @@
 {
   "language": "Language",
-  "search": "Search.."
+  "search": "Search..",
+  "trip_expired": "This tour is probably already over.",
+  "trip_does_not_exist": "This tour probably does not exist (anymore).",
+  "add_favourites": "Add new stops as favorites by clicking on the star when opening the stop.",
+  "search_stop_vehicle":"Search for a stop or a vehicle",
+  "no_entry": "There seems to be no entry for your search.",
+  "search_result": "Search result"
 }
