--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -6,5 +6,14 @@
   "add_favourites": "Add new stops as favorites by clicking on the star when opening the stop.",
   "search_stop_vehicle":"Search for a stop or a vehicle",
   "no_entry": "There seems to be no entry for your search.",
-  "search_result": "Search result"
+  "search_result": "Search result",
+  "where_is_my_bus": "Where is my bus? Kiel-Live shows current departure times for all stops and the current position of your bus.",
+  "support_us": "Support us by sharing the app with your friends and give us feedback!",
+  "no_man_wants_to_stop_here_right_now.": "No man wants to stop here right now.",
+  "this_stop_probably_does_not_exist": "This stop probably does not exist.",
+  "new_version": "A new version is available.",
+  "update_title": "Woohoo there is an update!",
+  "update_msg": "The new version should help you navigate through Kiel even better.",
+  "feedback": "Feel free to send feedback to",
+  "follow_us": "and follow us on"
 }
