--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -4,16 +4,38 @@
   "trip_expired": "This tour is probably already over.",
   "trip_does_not_exist": "This tour probably does not exist (anymore).",
   "add_favourites": "Add new stops as favorites by clicking on the star when opening the stop.",
-  "search_stop_vehicle":"Search for a stop or a vehicle",
+  "search_stop_vehicle": "Search for a stop or a vehicle",
   "no_entry": "There seems to be no entry for your search.",
   "search_result": "Search result",
   "where_is_my_bus": "Where is my bus? Kiel-Live shows current departure times for all stops and the current position of your bus.",
   "support_us": "Support us by sharing the app with your friends and give us feedback!",
-  "no_man_wants_to_stop_here_right_now.": "No man wants to stop here right now.",
+  "no_bus_wants_to_stop_here_right_now.": "No bus wants to stop here right now.",
   "this_stop_probably_does_not_exist": "This stop probably does not exist.",
   "new_version": "A new version is available.",
   "update_title": "Woohoo there is an update!",
   "update_msg": "The new version should help you navigate through Kiel even better.",
-  "feedback": "Feel free to send feedback to",
-  "follow_us": "and follow us on"
+  "feedback": "Feel free to send feedback to {email} and follow us on {instagram}",
+  "nice": "Nice!",
+  "instagram": "Instagram",
+  "404_error": "Whoa 404, either we broke something or you had a typing mishap :-/",
+  "404_back_to": "Back to {link}",
+  "home": "Home",
+  "install": "Install",
+  "cancel": "Cancel",
+  "close": "Close",
+  "alerts": "Alerts",
+  "favorites": "Favorites",
+  "logo_alt": "Kiel-Live logo, the front of a bus with Manni written on it",
+  "remove_favorite": "Delete favorite",
+  "kiel_live": "Kiel-Live",
+  "follow_instagram": "Follow {account}",
+  "develop_on_github": "Develop on Github",
+  "changelog": "Changelog",
+  "changelog_rewrite_version_2": "Completly new app with focus on the map",
+  "changelog_live_locations": "Map with stop and live locations of all busses",
+  "changelog_alerts": "Show alerts for stops and vehicles",
+  "changelog_project_started": "Project started",
+  "stopping": "stopping",
+  "immediately": "immediately",
+  "minutes": "{minutes} min"
 }
