improve style, add translations

--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -37,5 +37,7 @@
   "changelog_project_started": "Projekt gestartet",
   "stopping": "hält",
   "immediately": "sofort",
-  "minutes": "{minutes} Min"
+  "minutes": "{minutes} Min",
+  "settings": "Einstellungen",
+  "map": "Karte"
 }
