--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -39,5 +39,6 @@
   "immediately": "sofort",
   "minutes": "{minutes} Min",
   "settings": "Einstellungen",
-  "map": "Karte"
+  "map": "Karte",
+  "no_connection": "Keine Verbindung"
 }
