--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -40,5 +40,10 @@
   "minutes": "{minutes} min",
   "settings": "Settings",
   "map": "Map",
-  "analytics": "Analytics"
+  "analytics": "Analytics",
+  "version_from": "Version from:",
+  "give_feedback": "Give feedback",
+  "lite_mode": "Lite mode",
+  "lite_mode_description": "If you enable the lite mode the data will be shown to you without the map. This allows you to save some data volume.",
+  "changelog_trips_path_lite_mode": "Show the route of a selected bus on the map and new lite mode to save data volume"
 }
