move ... from search

--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -1,6 +1,6 @@
 {
   "language": "Language",
-  "search": "Suchen ...",
+  "search": "Suchen",
   "trip_expired": "Diese Tour ist wohl schon zu Ende.",
   "trip_does_not_exist": "Diese Tour gibt es wohl nicht (mehr).",
   "add_favourites": "Füge neue Haltestellen als Favoriten hinzu, indem du beim Öffnen der Haltestelle auf den Stern klickst.",
