fix: improve accessibility

--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -26,6 +26,7 @@
   "alerts": "Hinweise",
   "favorites": "Favoriten",
   "logo_alt": "Kiel-Live Logo, die Vorderseite eines Busses auf dem Manni steht",
+  "add_favorite": "Favorit hinzufügen",
   "remove_favorite": "Favorit löschen",
   "kiel_live": "Kiel-Live",
   "follow_instagram": "Follow {account}",
