--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -26,6 +26,7 @@
   "alerts": "Alerts",
   "favorites": "Favorites",
   "logo_alt": "Kiel-Live logo, the front of a bus with Manni written on it",
+  "add_favorite": "Add favorite",
   "remove_favorite": "Delete favorite",
   "kiel_live": "Kiel-Live",
   "follow_instagram": "Follow {account}",
