--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -47,5 +47,10 @@
   "give_feedback": "Feedback geben",
   "lite_mode": "Lite Mode",
   "lite_mode_description": "Wenn du den Lite Mode aktiviert hast werden dir die Daten ohne Karte angezeigt, sodass du auch mit geringem Datenvolumen die App nutzen kannst.",
-  "changelog_trips_path_lite_mode": "Anzeige der Route eines ausgewählten Busses auf der Karte und neuer Lite-Modus um Datenvolumen zu sparen"
+  "changelog_trips_path_lite_mode": "Anzeige der Route eines ausgewählten Busses auf der Karte und neuer Lite-Modus um Datenvolumen zu sparen",
+  "theme": "Theme",
+  "theme_description": "Wähle ein Theme aus, das dir gefällt.",
+  "auto": "System Theme nutzen",
+  "light": "Hell",
+  "dark": "Dunkel"
 }
