fix: fix translations

--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -3,13 +3,13 @@
   "search": "Search",
   "trip_expired": "This tour is probably already over.",
   "trip_does_not_exist": "This tour probably does not exist (anymore).",
-  "add_favourites": "Add new stops as favorites by clicking on the star when opening the stop.",
+  "add_favorites": "Add new stops as favorites by clicking on the star when opening the stop.",
   "search_stop_vehicle": "Search for a stop or a vehicle",
   "no_entry": "There seems to be no entry for your search.",
   "search_result": "Search result",
   "where_is_my_bus": "Where is my bus? Kiel-Live shows current departure times for all stops and the current position of your bus.",
   "support_us": "Support us by sharing the app with your friends and give us feedback!",
-  "no_bus_wants_to_stop_here_right_now.": "No bus wants to stop here right now.",
+  "no_bus_wants_to_stop_here_right_now": "No bus wants to stop here right now.",
   "this_stop_probably_does_not_exist": "This stop probably does not exist.",
   "new_version": "A new version is available.",
   "update_title": "Woohoo there is an update!",
@@ -32,7 +32,7 @@
   "follow_instagram": "Follow {account}",
   "develop_on_github": "Develop on Github",
   "changelog": "Changelog",
-  "changelog_rewrite_version_2": "Completly new app with focus on the map",
+  "changelog_rewrite_version_2": "Completely new app with focus on the map",
   "changelog_live_locations": "Map with stop and live locations of all busses",
   "changelog_alerts": "Show alerts for stops and vehicles",
   "changelog_project_started": "Project started",
