--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -3,13 +3,13 @@
   "search": "Suchen",
   "trip_expired": "Diese Tour ist wohl schon zu Ende.",
   "trip_does_not_exist": "Diese Tour gibt es wohl nicht (mehr).",
-  "add_favourites": "Füge neue Haltestellen als Favoriten hinzu, indem du beim Öffnen der Haltestelle auf den Stern klickst.",
+  "add_favorites": "Füge neue Haltestellen als Favoriten hinzu, indem du beim Öffnen der Haltestelle auf den Stern klickst.",
   "search_stop_vehicle": "Suche nach einer Haltestelle oder einem Fahrzeug",
   "no_entry": "Zu deiner Suche existiert anscheinend kein Eintrag.",
   "search_result": "Suchergebnisse",
   "where_is_my_bus": "Wo bleibt mein Bus? Kiel-Live zeigt aktuelle Abfahrtszeiten für alle Haltestellen und die aktuelle Position von deinem Bus an.",
   "support_us": "Unterstütze uns indem du die App mit deinen Freunden teilst und gib uns Feedback!",
-  "no_bus_wants_to_stop_here_right_now.": "Hier will gerade wohl kein Manni halten.",
+  "no_bus_wants_to_stop_here_right_now": "Hier will gerade wohl kein Manni halten.",
   "this_stop_probably_does_not_exist": "Diese Haltestelle gibt es wohl nicht.",
   "new_version": "Eine neue Version ist verfügbar.",
   "update_title": "Wuhuu es gibt ein Update!",
