feat: replace reload prompt with button in app bar (#205)
* feat: improve service worker update terminology

* replace reload prompt with button in app bar

* fix v-if

* update icon

--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -11,7 +11,6 @@
   "support_us": "Support us by sharing the app with your friends and give us feedback!",
   "no_bus_wants_to_stop_here_right_now": "No bus wants to stop here right now.",
   "this_stop_probably_does_not_exist": "This stop probably does not exist.",
-  "new_version": "A new version is available.",
   "update_title": "Woohoo there is an update!",
   "update_msg": "The new version should help you navigate through Kiel even better.",
   "feedback": "Feel free to send feedback to {email} and follow us on {instagram}",
@@ -20,8 +19,7 @@
   "404_error": "Whoa 404, either we broke something or you had a typing mishap :-/",
   "404_back_to": "Back to {link}",
   "home": "Home",
-  "install": "Install",
-  "cancel": "Cancel",
+  "update": "Update",
   "close": "Close",
   "alerts": "Alerts",
   "favorites": "Favorites",
