feat: add contact form

--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -42,7 +42,6 @@
   "analytics": "Analytics",
   "no_connection": "Keine Verbindung",
   "version_from": "Version vom:",
-  "give_feedback": "Feedback geben",
   "lite_mode": "Lite Mode",
   "lite_mode_description": "Wenn du den Lite Mode aktiviert hast werden dir die Daten ohne Karte angezeigt, sodass du auch mit geringem Datenvolumen die App nutzen kannst.",
   "changelog_trips_path_lite_mode": "Anzeige der Route eines ausgewählten Busses auf der Karte und neuer Lite-Modus um Datenvolumen zu sparen",
@@ -52,5 +51,8 @@
   "light": "Hell",
   "dark": "Dunkel",
   "next_stop": "Nächster Stop:",
-  "ok": "Ok"
+  "ok": "Ok",
+  "contact_title": "Möchtest du Feedback geben, eine Idee vorschlagen, ein Problem melden oder einfach nur Danke sagen? Wir freuen uns über deine E-Mail!",
+  "send_email": "E-Mail senden",
+  "contact_us": "Kontaktiere uns"
 }
