--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -54,5 +54,6 @@
   "ok": "Ok",
   "contact_title": "Möchtest du Feedback geben, eine Idee vorschlagen, ein Problem melden oder einfach nur Danke sagen? Wir freuen uns über deine E-Mail!",
   "send_email": "E-Mail senden",
-  "contact_us": "Kontaktiere uns"
+  "contact_us": "Kontaktiere uns",
+  "changelog_nok_ferry": "Fahrplan der Kanal-Fähre Adler 1 hinzugefügt"
 }
