--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -53,6 +53,7 @@
   "next_stop": "Nächster Stop:",
   "ok": "Ok",
   "contact_title": "Möchtest du Feedback geben, eine Idee vorschlagen, ein Problem melden oder einfach nur Danke sagen? Wir freuen uns über deine E-Mail!",
+  "contact_email_body": "Moin Kiel-Live Team 👋,\n\n",
   "send_email": "E-Mail senden",
   "contact_us": "Kontaktiere uns"
 }
