--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -54,6 +54,7 @@
   "ok": "Ok",
   "contact_title": "Möchtest du Feedback geben, eine Idee vorschlagen, ein Problem melden oder einfach nur Danke sagen? Wir freuen uns über deine E-Mail!",
   "contact_email_body": "Moin Kiel-Live Team 👋,\n\n",
+  "feedback_subject": "Feedback zu Kiel-Live",
   "send_email": "E-Mail senden",
   "contact_us": "Kontaktiere uns"
 }
