feat: add nok ferry data (#269)
Co-authored-by: Anbraten <6918444+anbraten@users.noreply.github.com>
Co-authored-by: Anbraten <anton@ju60.de>

--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -56,5 +56,6 @@
   "contact_email_body": "Moin Kiel-Live Team 👋,\n\n",
   "feedback_subject": "Feedback zu Kiel-Live",
   "send_email": "E-Mail senden",
-  "contact_us": "Kontaktiere uns"
+  "contact_us": "Kontaktiere uns",
+  "changelog_nok_ferry": "Fahrplan der Kanal-Fähre Adler 1 hinzugefügt"
 }
