--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -56,5 +56,6 @@
   "contact_email_body": "Hi Kiel-Live Team 👋,\n\n",
   "feedback_subject": "Feedback to Kiel-Live",
   "send_email": "Send email",
-  "contact_us": "Contact us"
+  "contact_us": "Contact us",
+  "changelog_nok_ferry": "Added schedule of the canal ferry Adler 1"
 }
