--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -57,5 +57,7 @@
   "feedback_subject": "Feedback to Kiel-Live",
   "send_email": "Send email",
   "contact_us": "Contact us",
-  "changelog_nok_ferry": "Added schedule of the canal ferry Adler 1"
+  "changelog_nok_ferry": "Added schedule of the canal ferry Adler 1",
+  "navigate_to": "Navigate to",
+  "rent_vehicle": "Start ride"
 }
