--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -60,5 +60,7 @@
   "changelog_nok_ferry": "Fahrplan der Kanal-Fähre Adler 1 hinzugefügt",
   "feature_flag_new_api": "Neue API verwenden",
   "feature_flag_actions": "Aktionen aktivieren",
-  "feature_flag_actions_description": "Aktionen wie das Navigieren zu Fahrzeugen oder Buchen von Tickets aktivieren."
+  "feature_flag_actions_description": "Aktionen wie das Navigieren zu Fahrzeugen oder Buchen von Tickets aktivieren.",
+  "feature_flags": "Feature flags",
+  "feature_flags_description": "Aktiviere oder deaktiviere Funktionen, die sich noch in der Entwicklung befinden."
 }
