feat: add stop and vehicle actions (#277)

--- a/app/src/locales/de.json
+++ b/app/src/locales/de.json
@@ -62,5 +62,7 @@
   "feature_flag_actions": "Aktionen aktivieren",
   "feature_flag_actions_description": "Aktionen wie das Navigieren zu Fahrzeugen oder Buchen von Tickets aktivieren.",
   "feature_flags": "Feature flags",
-  "feature_flags_description": "Aktiviere oder deaktiviere Funktionen, die sich noch in der Entwicklung befinden."
+  "feature_flags_description": "Aktiviere oder deaktiviere Funktionen, die sich noch in der Entwicklung befinden.",
+  "navigate_to": "Navigieren",
+  "rent_vehicle": "Fahrt beginnen"
 }
