--- a/app/src/locales/en.json
+++ b/app/src/locales/en.json
@@ -62,5 +62,7 @@
   "feature_flag_actions": "Enable actions",
   "feature_flag_actions_description": "Enable actions like navigate to stop, rent vehicle, ...",
   "feature_flags": "Feature flags",
-  "feature_flags_description": "Enable or disable features that are still in development."
+  "feature_flags_description": "Enable or disable features that are still in development.",
+  "navigate_to": "Navigate to",
+  "rent_vehicle": "Start ride"
 }
